[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://renner-small.tres" type="DynamicFont" id=2]
[ext_resource path="res://renner-smallish.tres" type="DynamicFont" id=3]
[ext_resource path="res://menuScenes/insurance/TabContainer.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 120.0
margin_top = 56.0
margin_right = 896.0
margin_bottom = 511.0
tab_align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Insurance" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 43.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Insurance"]
margin_left = 32.0
margin_top = 29.0
margin_right = 448.0
margin_bottom = 365.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Insurance/VBoxContainer"]
margin_right = 416.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 3 )
text = "Something financially damaging might happen, insurance can help cover some of this. The insurance works for next 3 years."
autowrap = true

[node name="Home" type="CheckBox" parent="TabContainer/Insurance/VBoxContainer"]
margin_top = 86.0
margin_right = 416.0
margin_bottom = 129.0
text = "Home Insurance"
align = 1

[node name="Health" type="CheckBox" parent="TabContainer/Insurance/VBoxContainer"]
margin_top = 149.0
margin_right = 416.0
margin_bottom = 192.0
text = "Health Insurance"
align = 1

[node name="Employment" type="CheckBox" parent="TabContainer/Insurance/VBoxContainer"]
margin_top = 212.0
margin_right = 416.0
margin_bottom = 255.0
text = " Employment Insurance"
align = 1

[node name="Control" type="Control" parent="TabContainer/Insurance"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="insurance" type="Label" parent="TabContainer/Insurance/Control"]
margin_left = 496.0
margin_top = 29.0
margin_right = 760.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 3 )
text = "Home insurance will cover the monetary value of the damages to your home."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost" type="Label" parent="TabContainer/Insurance/Control"]
margin_left = 504.0
margin_top = 122.0
margin_right = 629.0
margin_bottom = 155.0
text = "$800"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost2" type="Label" parent="TabContainer/Insurance/Control"]
margin_left = 504.0
margin_top = 253.0
margin_right = 629.0
margin_bottom = 286.0
text = "$900"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost3" type="Label" parent="TabContainer/Insurance/Control"]
margin_left = 504.0
margin_top = 189.0
margin_right = 629.0
margin_bottom = 222.0
text = "$1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total" type="Label" parent="TabContainer/Insurance/Control"]
margin_left = 504.0
margin_top = 341.0
margin_right = 629.0
margin_bottom = 374.0
text = "$1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pay" type="Button" parent="TabContainer/Insurance/Control"]
margin_left = 384.0
margin_top = 333.0
margin_right = 447.0
margin_bottom = 376.0
text = "Pay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error" type="Label" parent="TabContainer/Insurance/Control"]
margin_left = 24.0
margin_top = 341.0
margin_right = 252.0
margin_bottom = 374.0
custom_fonts/font = ExtResource( 2 )
text = "Not enough money"
[connection signal="mouse_entered" from="TabContainer/Insurance/VBoxContainer/Home" to="TabContainer" method="_on_Home_mouse_entered"]
[connection signal="toggled" from="TabContainer/Insurance/VBoxContainer/Home" to="TabContainer" method="_on_Home_toggled"]
[connection signal="mouse_entered" from="TabContainer/Insurance/VBoxContainer/Health" to="TabContainer" method="_on_Health_mouse_entered"]
[connection signal="toggled" from="TabContainer/Insurance/VBoxContainer/Health" to="TabContainer" method="_on_Health_toggled"]
[connection signal="mouse_entered" from="TabContainer/Insurance/VBoxContainer/Employment" to="TabContainer" method="_on_Employment_mouse_entered"]
[connection signal="toggled" from="TabContainer/Insurance/VBoxContainer/Employment" to="TabContainer" method="_on_Employment_toggled"]
[connection signal="pressed" from="TabContainer/Insurance/Control/pay" to="TabContainer" method="_on_pay_pressed"]
